--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.4",
     "@mui/material-nextjs": "^6.1.4",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
