--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "sonner": "^1.7.0"
   },
   "devDependencies": {
     "@types/node": "^20",
