--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.4",
     "@mui/material-nextjs": "^6.1.4",
@@ -21,7 +22,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
-    "sonner": "^1.7.0"
+    "sonner": "^1.7.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
