--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.4",
     "@mui/material-nextjs": "^6.1.4",
+    "@mui/x-data-grid": "^7.23.0",
     "@reduxjs/toolkit": "^2.4.0",
     "axios": "^1.7.8",
     "jwt-decode": "^4.0.0",
