--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.8",
-    "@mui/material": "^6.1.4",
+    "@mui/lab": "^6.0.0-beta.19",
+    "@mui/material": "^6.2.0",
     "@mui/material-nextjs": "^6.1.4",
     "@mui/x-data-grid": "^7.23.0",
     "@mui/x-date-pickers": "^7.23.1",
